--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfect Tours - Tu Guía de Viajes</title>
+    <link rel="icon" type="image/x-icon" href="./img/PTP.ico">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -11,7 +12,9 @@
     <header class="header">
         <nav class="navbar">
             <div class="logo">
-                <h1>Perfect Tours</h1>
+                <a href="#" class="logo-link">
+                    <img src="./img/PTP.png" alt="Perfect Tours Logo" class="logo-img">
+                </a>
             </div>
             <button class="menu-toggle" aria-label="Toggle menu">
                 <span class="hamburger"></span>
